temporary fix to overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ background: url(https://cdn.artofproblemsolving.com/attachments/5/8/0e3aad833ef3
 }
 
 #closeModal:active {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 
@@ -205,14 +205,15 @@ background: url(https://cdn.artofproblemsolving.com/attachments/5/8/0e3aad833ef3
   outline: 0;
   padding: 0;
   position: relative;
-  width: 40%;
-  height: 50vh;
+  width: 60%;
+  height: 80vh;
   transition: 0.3s;
   border-radius: 15px !important;
   backdrop-filter: blur(2rem);
   font-family: 'Poppins';
   font-weight: 600;
   color: #426696;
+  overflow-y: scroll;
 
  
  
@@ -228,7 +229,7 @@ background: url(https://cdn.artofproblemsolving.com/attachments/5/8/0e3aad833ef3
   border-radius: 5px;
   box-shadow: 0px 10px 24px 0px rgb(0 0 0 / 0.25);
   width: max-content;
-  padding: 0.1em 1.5em 0 0.6em;
+  padding: 0.1em 1.3em 0 0.6em;
   text-indent: 2ch;
   color: black;
 }
@@ -479,14 +480,16 @@ p {
   flex-direction: column;
   position: absolute;
   top: 0;
-  left: 20%;
+  left: 35%;
   overflow: hidden;
 }
 
 .settings-navigation {
   background-color: rgba(255, 255, 255, 0.897);
   width: 10rem;  
-  height: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 display: flex;
@@ -494,8 +497,11 @@ flex-direction: column;
 align-items: flex-start;
 }
 
-@media (width: 100px) {
-  .logo{
-  display: none;
+@media (max-width: 400px) {
+  .logo {
+    display: none;
+  }
+  .modalContent{
+  height: 90vh;
   }
 }
